# elma

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
examples/: app.swift
src/AST/: ASTContext.cpp  ASTContext.h  ASTVisitor.cpp  ASTVisitor.h  Comment.cpp  Comment.h  Decl.cpp  Decl.h  Expr.cpp  Expr.h  Identifier.cpp  Identifier.h  Node.h  Stmt.cpp  Stmt.h  Type.cpp  Type.h  TypeRepr.cpp  TypeRepr.h
src/Basic/: Diagnostic.cpp  Diagnostic.h  Forward.h  Location.cpp  Location.h  StringHelper.cpp  StringHelper.h
src/CodeGen/: BytecodeGenerator.cpp  BytecodeGenerator.h  Instruction.cpp  Instruction.h  Opcode.h  Runtime.cpp  Runtime.h  Transpiler.cpp  Transpiler.h
src/Driver/: Driver.cpp  Driver.h
src/Parser/: Lexer.cpp  Lexer.h  Lexer.l  Parser.cpp  Parser.h  Parser.y  stack.hh
src/Printer/: ASTDumper.cpp  ASTDumper.h  ASTFormatter.cpp  ASTFormatter.h  PrettyPrinter.cpp  PrettyPrinter.h
src/Sema/: ASTEvaluator.cpp  ASTEvaluator.h  Entity.cpp  Entity.h  IdentifierResolver.cpp  IdentifierResolver.h  InfiniteRecursion.cpp  InfiniteRecursion.h  Optimizer.cpp  Optimizer.h  Scope.cpp  Scope.h  SemaChecker.cpp  SemaChecker.h  TypeHelper.cpp  TypeHelper.h  TypeInferer.cpp  TypeInferer.h  TypeReprResolver.cpp  TypeReprResolver.h  TypeResolver.cpp  TypeResolver.h  Value.h
test/: ASTDumperTest.cpp  CommentTest.cpp  IdentifierResolverTest.cpp  LexerTest.cpp  ParserTest.cpp  PrettyPrinterTest.cpp  SemaCheckerTest.cpp  TranspilerTest.cpp  TypeResolverTest.cpp
tools/driver/: main.cpp
